simplify (remove welcome component)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <nb-layout>
 
   <nb-layout-header fixed>
-  <!-- Insert header here -->
+    <h1>Welcome {{user}}</h1>
   </nb-layout-header>
 
   <nb-layout-column>
-    <app-welcome></app-welcome>
 
   </nb-layout-column>
 
