trying to add circles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
     <h1>Welcome {{user}}</h1>
   </nb-layout-header>
 
-  <nb-layout-column>
-
+  <nb-layout-column>Left column
+<large-circle-button></large-circle-button>
+    
   </nb-layout-column>
 
   <nb-layout-footer fixed>
