--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </nb-layout-header>
 
   <nb-layout-column>Left column
-<large-circle-button></large-circle-button>
+<app-large-circle-button></app-large-circle-button>
     
   </nb-layout-column>
 
