--- a/src/app/large-circle-button/large-circle-button.component.scss
+++ b/src/app/large-circle-button/large-circle-button.component.scss
@@ -1,6 +1,6 @@
 .btn-circle {
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
     text-align: center;
     padding: 6px 0;
     font-size: 12px;
