--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,14 @@
   <nb-layout-header fixed>
     <h1>Welcome {{user}}</h1>
   </nb-layout-header>
-
-  <nb-layout-column>Left column
-<app-large-circle-button></app-large-circle-button>
-    
+<nb-layout-column>
+  <app-large-circle-button [text]="'My Cookbook'"></app-large-circle-button>
+</nb-layout-column>
+  <nb-layout-column>
+    <app-large-circle-button [text]="'In my fridge'"></app-large-circle-button>
+  </nb-layout-column>
+  <nb-layout-column>
+    <app-large-circle-button [text]="'Suggestions'"></app-large-circle-button>
   </nb-layout-column>
 
   <nb-layout-footer fixed>
