--- a/src/app/large-circle-button/large-circle-button.component.scss
+++ b/src/app/large-circle-button/large-circle-button.component.scss
@@ -1,9 +1,10 @@
 .btn-circle {
-    width: 100%;
-    height: 100%;
+    height: 300px;
+    width: 300px;
+    background-color: darkred;
     text-align: center;
     padding: 6px 0;
     font-size: 12px;
     line-height: 1.428571429;
-    border-radius: 15px;
+    border-radius: 50%;
   }
