--- a/src/themes.scss
+++ b/src/themes.scss
@@ -14,5 +14,7 @@ $nb-themes: nb-register-theme((
   // color-primary-700: #1a34b8,
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
+  //button-round-border-radius: 50%
+
 
 ), default, default);
