--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 
   <nb-layout-header fixed>
-    <h1>Welcome Max !</h1>
+    <h1>Welcome Max ! This is the dashboard</h1>
   </nb-layout-header>
   <nb-layout-column>
     <app-large-circle-button [text]="'My Cookbook'"></app-large-circle-button>
