--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <nb-layout-header fixed>
     <h1>Welcome Max ! This is the dashboard</h1>
   </nb-layout-header>
+  <div>
   <nb-layout-column>
     <app-large-circle-button [text]="'My Cookbook'"></app-large-circle-button>
   </nb-layout-column>
@@ -12,3 +13,4 @@
     <app-large-circle-button [text]="'Suggestions'"></app-large-circle-button>
   </nb-layout-column>
 
+  </div>
