remoce large circle component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,13 +4,13 @@
   </nb-layout-header>
   <div>
   <nb-layout-column>
-    <app-large-circle-button [text]="'My Cookbook'"></app-large-circle-button>
+    <button nbButton>My Cookbook</button>
   </nb-layout-column>
   <nb-layout-column>
-    <app-large-circle-button [text]="'In my fridge'"></app-large-circle-button>
+    <button nbButton>In my fridge</button>
   </nb-layout-column>
   <nb-layout-column>
-    <app-large-circle-button [text]="'Suggestions'"></app-large-circle-button>
+    <button nbButton>Suggestions</button>
   </nb-layout-column>
 
   </div>
