--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,13 @@
 div {
   margin-top:100px;
 }
+.btn-circle {
+  height: 300px;
+  width: 300px;
+  background-color: darkred;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 50%;
+}
