--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,13 +4,13 @@
   </nb-layout-header>
   <div>
   <nb-layout-column>
-    <button nbButton outline shape="round">My Cookbook</button>
+    <button nbButton class="btn-circle" outline shape="round">My Cookbook</button>
   </nb-layout-column>
   <nb-layout-column>
-    <button nbButton outline shape="round">In my fridge</button>
+    <button nbButton class="btn-circle" outline shape="round">In my fridge</button>
   </nb-layout-column>
   <nb-layout-column>
-    <button nbButton outline shape="round">Suggestions</button>
+    <button nbButton class="btn-circle" outline shape="round">Suggestions</button>
   </nb-layout-column>
 
   </div>
