create menu component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 
   <nb-layout-header fixed>
     <h1>Welcome Max ! This is the dashboard</h1>
+    <app-menu></app-menu>
+    
   </nb-layout-header>
   <div>
   <nb-layout-column>
