add module Dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 
   <nb-layout-header fixed>
     <h1>Welcome Max ! This is the dashboard</h1>
-    <app-menu></app-menu>
-    
+ 
+    <app-my-component></app-my-component>
   </nb-layout-header>
   <div>
   <nb-layout-column>
@@ -14,5 +14,6 @@
   <nb-layout-column>
     <button nbButton class="btn-circle" outline shape="round">Suggestions</button>
   </nb-layout-column>
+  
 
   </div>
