--- a/src/app/dashboard/menu/menu.component.html
+++ b/src/app/dashboard/menu/menu.component.html
@@ -1,4 +1,7 @@
-<nb-card>
+<div>
     <nb-menu [items]="items">
     </nb-menu>
-  </nb-card>
+  </div>
+  <div>
+    <nb-icon icon="star" status="warning"></nb-icon>
+  </div>
