add additional import in app module

--- a/src/app/dashboard/menu/menu.component.html
+++ b/src/app/dashboard/menu/menu.component.html
@@ -1,7 +1,5 @@
 <div>
+  <nb-icon icon="heart-outline"></nb-icon>
     <nb-menu [items]="items">
     </nb-menu>
-  </div>
-  <div>
-    <nb-icon icon="star" status="warning"></nb-icon>
   </div>
