--- a/src/app/dashboard/menu/menu.component.html
+++ b/src/app/dashboard/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div>
-  <nb-icon icon="heart-outline"></nb-icon>
-    <nb-menu [items]="items">
-    </nb-menu>
+  <nb-icon icon="settings-2-outline"></nb-icon>
+    <!-- <nb-menu [items]="items">
+    </nb-menu> -->
   </div>
