--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 
-  <nb-layout-header fixed>
+  <nb-layout-header>
     <h1>Welcome Max ! This is the dashboard</h1>
-     
     <app-menu></app-menu>
+    
   </nb-layout-header>
   <div>
   <nb-layout-column>
