--- a/src/app/dashboard/menu/menu.component.scss
+++ b/src/app/dashboard/menu/menu.component.scss
@@ -1,5 +1,11 @@
+.menu-button {
+    position: fixed;
+}
 .user-menu {
-    margin-left: 40px;
-    //background-color: red;
-    margin-top:300px;
+  position: absolute;
+    margin-left: -5em;
+}
+
+nb-card {
+  margin-bottom: 0em;
 }
