test API hello msg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <nb-layout>
   <nb-layout-column>
     <router-outlet></router-outlet>
+    <app-test-api></app-test-api>
   </nb-layout-column>
+
 
 
   <nb-layout-footer fixed>
