--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     <button nbButton class="btn-circle" outline shape="round">My Cookbook</button>
   </nb-layout-column>
   <nb-layout-column>
-    <button nbButton class="btn-circle" outline shape="round">In my fridge</button>
+    <button (click)="redirect('inmyfridge')" nbButton  class="btn-circle" outline shape="round">In my fridge</button>
   </nb-layout-column>
   <nb-layout-column>
     <button nbButton class="btn-circle" outline shape="round">Suggestions</button>
