in my fridge view

--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -1,2 +1,16 @@
-<p>in-my-fridge works!</p>
 <nb-search type="rotate-layout"></nb-search>
+
+<nb-layout-column>
+    <nb-card accent="info">
+        <nb-card-body>
+          Search results will appear here.
+        </nb-card-body>
+      </nb-card>
+    <nb-card *ngFor="let i of selectedIngredients">
+      <nb-card-header>{{i.name}}</nb-card-header>
+      <nb-card-body>
+        <img src="{{baseImageUrl+i.image}}" alt="{{i.image}}">
+        
+      </nb-card-body>
+    </nb-card>
+  </nb-layout-column>
