--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -7,7 +7,7 @@
         </nb-card-body>
       </nb-card>
     <nb-card *ngFor="let i of selectedIngredients">
-      <nb-card-header>{{i.name}}</nb-card-header>
+      <nb-card-header>{{i.name | titlecase}}</nb-card-header>
       <nb-card-body>
         <img src="{{baseImageUrl+i.image}}" alt="{{i.image}}">
         
