click on whole bar to start NbSearch

--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -1,5 +1,6 @@
-<nb-search type="rotate-layout"></nb-search>
-
+<nb-layout-header (click)='startSearch()'>
+  <nb-search type="modal-move"></nb-search>
+</nb-layout-header>
 <nb-layout-column>
     <nb-card accent="info">
         <nb-card-body>
