--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -1,7 +1,11 @@
-<nb-layout-header (click)='startSearch()'>
+<nb-layout>
+<nb-layout-header style="cursor: pointer;" (click)='startSearch()'>
   <nb-search type="rotate-layout"></nb-search>
 </nb-layout-header>
+<nb-sidebar style="background-color: brown;">Sidebar Content</nb-sidebar>
+
 <nb-layout-column>
+
 
 
         <div class="card-col">
@@ -19,3 +23,4 @@
         </div>
 
   </nb-layout-column>
+  </nb-layout>
