add layout to landing page

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 
-  <nb-layout-header>
+  <nb-layout> 
+     <nb-layout-header>
     <h1>Welcome Max ! This is the dashboard</h1>
     <app-menu></app-menu>
     
@@ -14,6 +15,5 @@
   <nb-layout-column>
     <button nbButton (click)="showToast('bottom-left', 'warning')" class="btn-circle" outline shape="round">Suggestions</button>
   </nb-layout-column>
-  
-
   </div>
+</nb-layout>
