--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,13 @@
 
   <nb-layout> 
      <nb-layout-header>
-    <h1>Welcome Max ! This is the dashboard</h1>
+    Welcome Max ! This is the dashboard
     <app-menu></app-menu>
     
   </nb-layout-header>
-  <div>
   <nb-layout-column>
     <button nbButton (click)="showToast('bottom-left', 'warning')" class="btn-circle" outline shape="round">My Cookbook</button>
-  </nb-layout-column>
-  <nb-layout-column>
     <button (click)="redirect('inmyfridge')" nbButton  class="btn-circle" outline shape="round">In my fridge</button>
-  </nb-layout-column>
-  <nb-layout-column>
     <button nbButton (click)="showToast('bottom-left', 'warning')" class="btn-circle" outline shape="round">Suggestions</button>
   </nb-layout-column>
-  </div>
 </nb-layout>
