--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -2,7 +2,7 @@
 <nb-layout-header style="cursor: pointer;" (click)='startSearch()'>
   <nb-search type="rotate-layout"></nb-search>
 </nb-layout-header>
-<nb-sidebar style="background-color: brown;">Sidebar Content</nb-sidebar>
+<nb-sidebar>Your list</nb-sidebar>
 
 <nb-layout-column>
 
