fix spaces button

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
   </nb-layout-header>
   <nb-layout-column>
     <button nbButton (click)="showToast('bottom-left', 'warning')" class="btn-circle" outline shape="round">My Cookbook</button>
-    <button (click)="redirect('inmyfridge')" nbButton  class="btn-circle" outline shape="round">In my fridge</button>
+    <button nbButton (click)="redirect('inmyfridge')"   class="btn-circle" outline shape="round">In my fridge</button>
     <button nbButton (click)="showToast('bottom-left', 'warning')" class="btn-circle" outline shape="round">Suggestions</button>
   </nb-layout-column>
 </nb-layout>
