--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -2,11 +2,17 @@
 <nb-layout-header style="cursor: pointer;" (click)='startSearch()'>
   <nb-search type="rotate-layout"></nb-search>
 </nb-layout-header>
-<nb-sidebar>Your list</nb-sidebar>
+<nb-sidebar>Your list
+<nb-card *ngFor="let listItem of selectedIngredients">
+  <nb-card-body style="text-align: center;">
+    <img style="display: inline-block;" src="{{getImageOfIngredientUrl(listItem.image, size.small)}}"
+           alt="{{listItem.image}}">
+  </nb-card-body>
+</nb-card>
+
+</nb-sidebar>
 
 <nb-layout-column>
-
-
 
         <div class="card-col">
           <nb-card accent="info">
@@ -14,11 +20,16 @@
               Search results will appear here.
             </nb-card-body>
           </nb-card>
-          <nb-card  *ngFor="let i of selectedIngredients">
+          <nb-card  *ngFor="let i of resultIngredients">
             <nb-card-header>{{i.name | titlecase}}</nb-card-header>
             <nb-card-body style="text-align: center;">
-              <img style="display: inline-block;" src="{{baseImageUrl+i.image}}" alt="{{i.image}}">
+              <img style="display: inline-block;" src="{{getImageOfIngredientUrl(i.image, size.medium)}}" alt="{{i.image}}">
+
             </nb-card-body>
+            <nb-card-footer>
+              <button nbButton (click)="addToList(i)"> Add to my list</button>
+            </nb-card-footer>
+
           </nb-card>
         </div>
 
