--- a/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
+++ b/src/app/dashboard/in-my-fridge/in-my-fridge.component.html
@@ -1,8 +1,13 @@
 <nb-layout>
-<nb-layout-header style="cursor: pointer;" (click)='startSearch()'>
-  <nb-search type="rotate-layout"></nb-search>
-</nb-layout-header>
-<nb-sidebar>Your list
+    <nb-layout-header style="cursor: pointer;" (click)='startSearch()'>
+      <nb-search type="rotate-layout"></nb-search>
+    </nb-layout-header>
+<nb-sidebar responsive='true' state='collapsed'>
+      <nb-sidebar-header>
+            <nb-icon style="float: right;" 
+            icon="arrow-ios-back-outline" 
+            (click)="hideList()"></nb-icon>
+      </nb-sidebar-header>
 <nb-card *ngFor="let listItem of selectedIngredients">
   <nb-card-header>
     <button nbButton style="float: right;">
@@ -14,12 +19,12 @@
     <img style="display: inline-block;" src="{{getImageOfIngredientUrl(listItem.image, size.small)}}"
            alt="{{listItem.image}}">
   </nb-card-body>
-</nb-card>
-
+  </nb-card>
 </nb-sidebar>
 
-<nb-layout-column>
 
+<nb-layout-column>
+      <button *ngIf="!listIsVisible" nbButton (click)="showList()">Show list</button>
         <div class="card-col">
           <nb-card accent="info">
             <nb-card-body>
